State is propogated better, but still need to prevent player from playing on complete board and there needs to be some background behind the winning player symbol

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,7 +1,8 @@
-:root {
+/* :root {
     --border-size: 2px;
     --board-size: 82px;
-}
+} */
+/* THESE ARE NOW HANDLED INSIDE OF APP.JSX */
 
 .board {
     display: inline-flex;
@@ -56,7 +57,8 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    z-index: 10;
+    /* z-index: 10; */
+    /* ^^^^ Handled by JS */
     flex: 1;
 }
 
